--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@ body {
 }
 
 nav {
-  background-color: aquamarine;
+  background-color: rgb(131, 0, 0);
   height: 100px;
 
   display: flex;
@@ -70,6 +70,11 @@ nav {
   padding: 0 50px;
 }
 
+#nav-main #logo {
+  width: 200px;
+  
+}
+
 #login-nav {
   gap: 20px;
   display: flex;
@@ -78,17 +83,17 @@ nav {
 
 #login-nav a {
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 #login-nav a:hover {
   cursor: pointer;
-  color: rgb(9, 202, 138);
+  color: rgb(255, 255, 255);
 }
 
 #nav-ctg {
   height: 50px;
-  background-color: black;
+  background-color: rgb(22, 22, 22);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,7 +146,7 @@ nav {
   flex: 0 0 auto;
   width: 400px;
   height: 450px;
-  background: grey;
+  background: rgb(223, 223, 223);
   border-radius: 15px;
   color: white;
   font-size: 2rem;
@@ -217,11 +222,36 @@ nav {
     .swiper-slide {
       text-align: center;
       font-size: 18px;
-      background: #444;
+      background: #f8f8f8;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 10px;
     }
+
+.info-produto{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  
+  
+}
+
+.info-produto h1{
+  width: 350px;
+  
+  font-size: 15pt;
+}
+
+
+
+.img-produto{
+  width: 350px;
+}
 
 footer{
   display: flex;
@@ -229,7 +259,9 @@ footer{
   justify-content: center;
   align-items: center;
   padding: 20px;
-  background-color: aquamarine;
+  margin-top: 50px;
+  background-color: #830000;
+  color: black;
   height: 400px;
   
   
@@ -300,6 +332,8 @@ footer{
 #foot-info p{
   margin: 0;
 }
+
+
 
 
 
