--- a/static/css/style.css
+++ b/static/css/style.css
@@ -47,7 +47,7 @@
 }
 
 * {
-  font-family: "Figtree", sans-serif;
+  font-family: "Aleo", serif;
 }
 
 body {
@@ -72,7 +72,7 @@ nav {
 
 #nav-main #logo {
   width: 200px;
-  
+
 }
 
 #login-nav {
@@ -210,50 +210,129 @@ nav {
 .titulo-cont {
   margin-left: 10px;
   padding: 50px;
+  
 }
 
 .swiper {
-      width: 1790px;
-      height: 450px;
-      display: flex;
-      
-    }
-
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: #f8f8f8;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 10px;
-    }
-
-.info-produto{
-  width: 80%;
-  margin: 0 auto;
+  width: 1830px;
+  height: 500px;
   display: flex;
-  flex-direction: column;
+
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #ffffff;
+
+  display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  
-  
 }
 
-.info-produto h1{
+
+
+
+
+.info-produto {
+  text-align: left;
+  width: 80%;
+  margin-left: 20px;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: center;
+
+
+
+}
+
+.img-hover{
+  position: relative;
+  position: relative;
+  width: 400px; /* ajuste o tamanho conforme quiser */
+  height: 400px;
+  overflow: hidden;
+}
+
+.img-hover .img1 {
+  opacity: 1;
+}
+
+/* imagem de baixo escondida */
+.img-hover .img2 {
+  opacity: 0;
+}
+
+/* quando passa o mouse, troca */
+.img-hover:hover .img1 {
+  opacity: 0;
+}
+
+.img-hover:hover .img2 {
+  opacity: 1;
+}
+
+.info-produto h1 {
   width: 350px;
-  
+
   font-size: 15pt;
 }
 
-
-
-.img-produto{
-  width: 350px;
+.nome-produto {
+  color: #830000;
 }
 
-footer{
+
+
+.img-produto {
+  width: 400px;
+}
+
+.colecao-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1900px;
+  height: 650px;
+  gap: 70px;
+  
+}
+
+.colecao-win {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  align-items: flex-end;
+  background-color: #000000;
+  height: 650px;
+  width: 550px;
+  
+}
+
+
+
+.colecao-win img{
+  position: absolute;
+  top: 0;
+  transition: transform 0.5s ease;
+}
+
+.colecao-win:hover img {
+  transform: scale(1.3); /* dá o zoom */
+}
+
+.colecao-win h1{
+  color: white;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  position: relative;
+  z-index: 1;
+}
+
+footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -261,80 +340,74 @@ footer{
   padding: 20px;
   margin-top: 50px;
   background-color: #830000;
-  color: black;
+  color: rgb(255, 255, 255);
   height: 400px;
-  
-  
+
+
 }
 
-.container-foot{
+.container-foot {
   display: flex;
-  
+
 }
 
-.linha{
+.linha {
   display: flex;
   gap: 50px;
 }
 
-.coluna h1{
+.coluna h1 {
   font-weight: bold;
   font-size: 15pt;
   width: 300px;
 }
 
-.coluna li{
+.coluna li {
   list-style: none;
-  
-  color: black;
-  
+
+  color: rgb(255, 255, 255);
+
 }
 
 
 
-.coluna a{
+.coluna a {
   text-decoration: none;
 }
 
-.coluna a li:hover{
+.coluna a li:hover {
   color: #646464;
 }
 
-.coluna ul{
+.coluna ul {
   margin: 0;
   padding: 0;
-  
+
 }
 
-#rs-container{
+#rs-container {
   display: flex;
   gap: 10px;
   padding: 10px 0 20px 0px;
-  
+
 }
 
-#rs-container svg{
+#rs-container svg {
   width: 50px;
   height: 50px;
 }
 
-#fdp-container svg{
+#fdp-container svg {
   width: 70px;
   height: 70px;
 }
 
-#foot-info{
+#foot-info {
   display: flex;
   margin-top: 70px;
   gap: 50px;
 }
 
-#foot-info p{
+#foot-info p {
   margin: 0;
 }
-
-
-
-
-
-    
