--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Italianno&family=Luxurious+Script&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&family=Xanh+Mono:ital@0;1&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Averia+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"">
@@ -31,7 +31,7 @@
 
 
         <div id="login-nav">
-            <a href="">Entrar</a>
+            <a href="/login">Entrar</a>
             <a href="">Crie uma conta</a>
 
             <a href=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40"
@@ -119,6 +119,56 @@
                         <h1 class="preco-produto">R$00,00</h1>
                     </div>
                 </div>
+                <div class="swiper-slide"><img class="img-produto" src="../static/img/img-produtos/Produto sem foto.png"
+                        alt="produto">
+
+                    <div class="info-produto">
+
+                        <h1 class="nome-produto"><strong>Calça Mega Legal Muito</strong></h1>
+
+                        <h1 class="preco-produto">R$00,00</h1>
+                    </div>
+                </div>
+                <div class="swiper-slide"><img class="img-produto" src="../static/img/img-produtos/Produto sem foto.png"
+                        alt="produto">
+
+                    <div class="info-produto">
+
+                        <h1 class="nome-produto"><strong>Calça Mega Legal Muito</strong></h1>
+
+                        <h1 class="preco-produto">R$00,00</h1>
+                    </div>
+                </div>
+                <div class="swiper-slide"><img class="img-produto" src="../static/img/img-produtos/Produto sem foto.png"
+                        alt="produto">
+
+                    <div class="info-produto">
+
+                        <h1 class="nome-produto"><strong>Calça Mega Legal Muito</strong></h1>
+
+                        <h1 class="preco-produto">R$00,00</h1>
+                    </div>
+                </div>
+                <div class="swiper-slide"><img class="img-produto" src="../static/img/img-produtos/Produto sem foto.png"
+                        alt="produto">
+
+                    <div class="info-produto">
+
+                        <h1 class="nome-produto"><strong>Calça Mega Legal Muito</strong></h1>
+
+                        <h1 class="preco-produto">R$00,00</h1>
+                    </div>
+                </div>
+                <div class="swiper-slide"><img class="img-produto" src="../static/img/img-produtos/Produto sem foto.png"
+                        alt="produto">
+
+                    <div class="info-produto">
+
+                        <h1 class="nome-produto"><strong>Calça Mega Legal Muito</strong></h1>
+
+                        <h1 class="preco-produto">R$00,00</h1>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -157,7 +207,7 @@
                         <img class="img-produto 1" src="../static/img/img-produtos/Produto sem foto.png" alt="produto">
                         <img class="img-produto 2" src="../static/img/img-produtos/Produto sem foto.png" alt="produto">
                     </div>
-                    
+
                     <div class="info-produto">
 
                         <h1 class="nome-produto"><strong>Calça Mega Legal Muito</strong></h1>
