main page in react

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -17,7 +17,7 @@
         href="https://fonts.googleapis.com/css2?family=Averia+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"">
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <link rel=" stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
@@ -34,7 +34,8 @@
             <a href="/login">Entrar</a>
             <a href="">Crie uma conta</a>
 
-            <a href=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40"
+            <a href="">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40"
                     zoomAndPan="magnify" viewBox="0 0 75 74.999997" height="40" preserveAspectRatio="xMidYMid meet"
                     version="1.0">
                     <defs>
